replaced non alpha-numeric chars in output var names

--- a/action.yml
+++ b/action.yml
@@ -7,9 +7,9 @@ inputs:
     default: '**'
 outputs:
   filepath-sha1: # id of output
-    description: 'SHA-1 for "filepath"'
+    description: 'SHA-1 for "filepath" (note that non alpha-numeric characters are removed)'
   filepath-sha256: # id of output
-    description: 'SHA-256 for "filepath"'
+    description: 'SHA-256 for "filepath" (note that non alpha-numeric characters are removed)'
 runs:
   using: 'node12'
   main: 'index.js'
